<resources>
    <string name="app_name">NeWork</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">USERNAME</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="login_error">Login Error: %1$s</string>
    <string name="login_wrong">Wrong login or password</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="attached_content">Attached</string>
    <string name="play_attachment">Play attachment</string>
    <string name="description_post_likes">Like</string>
    <string name="description_post_mentions">Mentions</string>
    <string name="not_on_server_yet">Not loaded yet</string>
    <string name="etc">…</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="specific_edit_error">Error:%1$s.\nTry again</string>
    <string name="log_out">Log out</string>
    <string name="add_post">Add post</string>
    <string name="select_photo">Select photo</string>
    <string name="removePhoto">Remove attachment</string>
    <string name="specific_posting_error">Error code:%1$s Try sending the message again</string>
    <string name="back">Back</string>
    <string name="authorization_required">Authorization required</string>
    <string name="dialog_sign_in">You are not authorized. Please sign in or sign up.</string>
    <string name="logging_out">Logging out</string>
    <string name="dialog_log_out">Are you sure you want to log out?</string>
    <string name="select_video">Select video</string>
    <string name="posted_now">Now</string>
    <string name="post_content_hint">Post content</string>
    <string name="link_hint">Add link to your post</string>
    <string name="coordinates_hint">Add coordinates to your post</string>
    <string name="select_audio">Select audio</string>
    <string name="plus">+</string>
    <string name="description_choose_avatar">Choose your avatar</string>
    <string name="load_users_error">Loading users list error: %1$s</string>
    <string name="load_feed_error">Error loading posts. Try again</string>
    <string name="posts_empty">There are no posts</string>
    <string name="from_job">From</string>
    <string name="to_job">To</string>
    <string name="this_day">this day</string>
    <string name="jobs">Jobs</string>
    <string name="load_jobs_error">Loading job list error: %1$s</string>
    <string name="job_name">Job name</string>
    <string name="job_position">Job position</string>
    <string name="add_job">Add job</string>
    <string name="no_context">Please fill the post text</string>
    <string name="job_not_filled">Please fill all the required fields</string>
    <string name="job_finish_date">Job finish date (optional)</string>
    <string name="job_start_date">Job start date</string>
    <string name="job_link_optional">Job link (optional)</string>
    <string name="new_job_error">Adding new job error: %1$s</string>
    <string name="job_delete_error">Error deleteing post: %1$s</string>
    <string name="jobs_empty">There are no jobs</string>
    <string name="my_wall">My wall</string>
    <string name="feed_wall">All posts</string>
    <string name="description_post_participants">Participants</string>
    <string name="description_post_speakers">Speakers</string>
    <string name="events_empty">There are no events</string>
    <string name="add_event">Add event</string>
    <string name="event_wall">Event wall</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="need_geolocation">You need geolocation permission to use this feature</string>
    <string name="permission">Permission</string>
    <string name="no_user_location_error">Can\'t find your location yet</string>
    <string name="retry">Retry</string>
    <string name="like_error">Error while trying to like</string>
    <string name="participation_error">Error while trying to participate</string>
</resources>